--- a/deploy/worker/dev/deployment.yaml
+++ b/deploy/worker/dev/deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: vote
-  name: vote
+    app: worker
+  name: worker
 spec:
   replicas: 1
   
