--- a/deploy/worker/staging/deployment.yaml
+++ b/deploy/worker/staging/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: vote
-  name: vote
+    app: worker
+  name: worker
 spec:
   replicas: 1
